--- a/Aboutus.html
+++ b/Aboutus.html
@@ -10,7 +10,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio recusandae accusantium culpa dolore aperiam, ab sapiente amet animi officiis, porro veniam esse doloribus eveniet blanditiis dolores asperiores nam minus reprehenderit?</p>
     <h2>Contact Information</h2>
     <p>Phone: (123) 456-7890</p>
-    <a href="/index.html">go back to home</a>
-    <a href="/menulist.html">menu list</a>
+    <a href="index.html">go back to home</a>
+    <a href="menulist.html">menu list</a>
 </body>
 </html>
